2011-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document tiff:group-three-options define.
	* coders/tiff.c (WriteTIFFImage): Add support for a
	tiff:group-three-options define to allow power-users to set the
	value of the GROUP3OPTIONS tag.

2011-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Makefile.am: Include Hg.*, remove CVS.*.

	* scripts/html_fragments.py (nav_template): CVS tab changed to
	Source, which links to Hg.html.

	* www/Hg.rst: Document Hg repository access.

2011-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/rst2htmldeco.py (docutils_opts): Do not include a
	datestamp of any kind since it unnecessarily churns the
	repository, particularly if the output file did not otherwise
	change.

	* INSTALL-unix.txt: Fix typo in description of --without-lzma.

2011-05-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Treat exceptions thrown by
	jpeg_finish_decompress() as warnings rather than errors.
	(JPEGErrorHandler): Handle JPEG errors directly rather than
	passing them to a message formatting routine for handling.  Also
	added useful logging.
	(JPEGMessageHandler): Only handle JPEG traces and warnings.  Also
	added useful logging.

2011-05-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (EmitMessage): Treat an unhandled EXP marker as a
	warning rather than a hard error.  Resolves SourceForge issue
	3297995 "Unsupported marker type 0xdf".

2011-05-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (AppendImages): If the input list only contains
	one image, then return a new handle to the one image in the list
	rather than reporting an exception.  Problem was reported by Ravil
	Rakhimgulov ("Hunter1972").

2011-04-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageColorRegion): New function to set the
	constant pixel color for a specified region of the image.