@@ -76,6 +76,7 @@ RST2HTML_TARGETS = \
 	$(WWWDIR)/platforms.html \
 	$(WWWDIR)/process.html \
 	$(WWWDIR)/programming.html \
+	$(WWWDIR)/project.html \
 	$(WWWDIR)/quantize.html \
 	$(WWWDIR)/tools.html \
 	$(WWWDIR)/utilities.html \
@@ -107,6 +108,7 @@ WWW_RST_FILES = \
 	$(WWWDIR)/platforms.rst \
 	$(WWWDIR)/process.rst \
 	$(WWWDIR)/programming.rst \
+	$(WWWDIR)/project.rst \
 	$(WWWDIR)/quantize.rst \
 	$(WWWDIR)/tools.rst \
 	$(WWWDIR)/utilities.rst
@@ -169,6 +171,7 @@ WWW_HTML_FILES = \
 	$(WWWDIR)/perl.html \
 	$(WWWDIR)/platforms.html \
 	$(WWWDIR)/process.html \
+	$(WWWDIR)/project.html \
 	$(WWWDIR)/programming.html \
 	$(WWWDIR)/quantize.html \
 	$(WWWDIR)/tools.html \
