@@ -1,0 +1,73 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="generator" content="Docutils 0.8: http://docutils.sourceforge.net/" />
+<title>GraphicsMagick Project Information</title>
+<link rel="stylesheet" href="docutils-articles.css" type="text/css" />
+</head>
+<body>
+
+<div class="banner">
+<span>
+<img src="images/gm-107x76.png" alt="GraphicMagick logo" width="107" height="76" />
+<span class="title">GraphicsMagick</span>
+<form action="http://www.google.com/search">
+    Search&nbsp;site
+	<input type=hidden name="domains" value="www.graphicsmagick.org" />
+	<input type=hidden name="sitesearch" value="www.graphicsmagick.org" />
+    <input type=text name="q" size="25" maxlength="255" />
+    <input type=submit name="sa" value="Search" />
+</form>
+</span>
+</div>
+
+<div class="navmenu">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="Copyright.html">License</a></li>
+<li><a href="mission.html">Mission</a></li>
+<li><a href="download.html">Download</a></li>
+<li><a href="README.html">Install</a></li>
+<li><a href="FAQ.html">FAQ</a></li>
+<li><a href="NEWS.html">News</a> </li>
+<li><a href="formats.html">Formats</a></li>
+</ul>
+</div>
+<div class="navmenu">
+<ul>
+<li><a href="process.html">Process</a></li>
+<li><a href="contribute.html">Contribute</a></li>
+<li><a href="Hg.html">Source</a></li>
+<li><a href="http://sourceforge.net/mail/?group_id=73485" target="top_">Lists</a></li>
+<li><a href="Changes.html">Changes</a></li>
+<li><a href="https://sourceforge.net/tracker/?group_id=73485" target="top_">Bugs</a></li>
+<li><a href="utilities.html">Utilities</a></li>
+<li><a href="programming.html">Programming</a></li>
+<li><a href="links.html">Links</a></li>
+</ul>
+</div>
+<div class="document" id="graphicsmagick-project-information">
+<h1 class="title">GraphicsMagick Project Information</h1>
+
+<!-- This text is in reStucturedText format, so it may look a bit odd. -->
+<!-- See http://docutils.sourceforge.net/rst.html for details. -->
+<p><a class="reference external" href="Changes.html">Change Logs</a> - Read the change logs to see what changed.</p>
+<p><a class="reference external" href="Copyright.html">License</a> - Copyrights and usage terms for GraphicsMagick.</p>
+<p><a class="reference external" href="contribute.html">Contribute</a> - Contribute your work to the project.</p>
+<p><a class="reference external" href="https://sourceforge.net/tracker/?group_id=73485">Bugs</a> - Report a bug.</p>
+<p><a class="reference external" href="process.html">Development Process</a> - Read about the project development process.</p>
+<p><a class="reference external" href="download.html">Download</a> - Download the source code or binaries.</p>
+<p><a class="reference external" href="FAQ.html">FAQ</a> - Answers for the questions asked the most often.</p>
+<p><a class="reference external" href="README.html">Install</a> - Read about how to install the software.</p>
+<p><a class="reference external" href="links.html">Links</a> - Some links we find useful.</p>
+<p><a class="reference external" href="http://sourceforge.net/mail/?group_id=73485">Mailing Lists</a> - Participate in discussions on our mailing lists.</p>
+<p><a class="reference external" href="mission.html">Mission</a> - Every project needs a mission statement.</p>
+<p><a class="reference external" href="NEWS.html">News</a> - Read the project news and release notes.</p>
+<p><a class="reference external" href="Hg.html">Source Control</a> - Source control is important.  We now use Mercurial.</p>
+<hr class="docutils" />
+<p>Copyright © GraphicsMagick Group 2011</p>
+</div>
+</body>
+</html>
