@@ -1,0 +1,52 @@
+.. This text is in reStucturedText format, so it may look a bit odd.
+.. See http://docutils.sourceforge.net/rst.html for details.
+
+==================================
+GraphicsMagick Project Information
+==================================
+
+.. _Bugs : https://sourceforge.net/tracker/?group_id=73485
+.. _`Change Logs` : Changes.html
+.. _Contribute : contribute.html
+.. _`Development Process` : process.html
+.. _`Download` : download.html
+.. _`FAQ` : FAQ.html
+.. _`Install` : README.html
+.. _License : Copyright.html
+.. _Links : links.html
+.. _`Mailing Lists` : http://sourceforge.net/mail/?group_id=73485
+.. _`Mission` : mission.html
+.. _News : NEWS.html
+.. _`Source Control` : Hg.html
+
+`Change Logs`_ - Read the change logs to see what changed.
+
+License_ - Copyrights and usage terms for GraphicsMagick.
+
+Contribute_ - Contribute your work to the project.
+
+Bugs_ - Report a bug.
+
+`Development Process`_ - Read about the project development process.
+
+`Download`_ - Download the source code or binaries.
+
+`FAQ`_ - Answers for the questions asked the most often.
+
+`Install`_ - Read about how to install the software.
+
+Links_ - Some links we find useful.
+
+`Mailing Lists`_ - Participate in discussions on our mailing lists.
+
+Mission_ - Every project needs a mission statement.
+
+News_ - Read the project news and release notes.
+
+`Source Control`_ - Source control is important.  We now use Mercurial.
+
+--------------------------------------------------------------------------
+
+.. |copy|   unicode:: U+000A9 .. COPYRIGHT SIGN
+
+Copyright |copy| GraphicsMagick Group 2011
