@@ -1,3 +1,9 @@
+2011-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/project.rst: Add a page for links to pages about the
+	project.  The intention is to use this page to reduce the clutter
+	in the banner.
+
 2011-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* doc/options.imdoc: Document tiff:group-three-options define.
